# rust-debugger

./: Cargo.toml
programs/: hello  hello.c  hello_pie
src/: cli.rs  error.rs  main.rs  result.rs  tui.rs
src/debugger/: auxv.rs  disassembler.rs  mod.rs  registers.rs  subordinate.rs
src/debugger/dwarf/: mod.rs
src/safe/: mod.rs
src/safe/ptrace/: mod.rs
src/sys/: mod.rs
src/sys/ptrace/: mod.rs
