[package]
authors = ["Sam Rose <sam@cvpartner.com>"]
edition = "2018"
name = "rust-debugger"
version = "0.1.0"

[dependencies]
human-panic = "*"
libc = "0.2"
log = "0.4.8"
env_logger = "0.7.1"
iced-x86 = "1"
gimli = "0.20"
memmap = "0.7"
object = "0.18"
tui = "0.9"
termion = "1.5"
unicode-width = "0.1"
rustyline = "6"
elf = "0.0.10"